[package]
name        = "mnemesis"
version     = "0.1.0"
description = "Never forget anything ever again"
authors     = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
license     = "BSD-2-Clause"
readme      = "README.md"

[lib]
name = "mnemesis_utils"

[dependencies]
base32       = "^0.3"
clap         = "^2.0"
file         = "^1.1"
gpgme        = "^0.6"
oath         = "^0.10"
rpassword    = "^1.0"
rprompt      = "^1.0"
serde        = "^1.0"
serde_derive = "^1.0"
serde_json   = "^1.0"
xdg          = "^2.1"
